Switch to CosmosDb

--- a/src/TransactionsWebApi/TransactionsWebApi.csproj
+++ b/src/TransactionsWebApi/TransactionsWebApi.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TransactionsCore\TransactionsCore.csproj" />
     <ProjectReference Include="..\TransactionsData\TransactionsData.csproj" />
+    <ProjectReference Include="..\TransactionsGraphQL\TransactionsGraphQL.csproj" />
   </ItemGroup>
 
 </Project>
