--- a/src/TransactionsWebApi/appsettings.json
+++ b/src/TransactionsWebApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CosmosDb": {
+    "Account": "<Endpoint URI of your Azure Cosmos account>",
+    "Key": "<PRIMARY KEY of Azure Cosmos account>",
+    "DatabaseName": "TransactionsDb",
+    "ContainerName": "TransactionsContainer"
+  }
 }
