--- a/src/TransactionsGraphQL/TransactionsGraphQL.csproj
+++ b/src/TransactionsGraphQL/TransactionsGraphQL.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Cosmos" Version="3.26.1" />
-    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="HotChocolate.AspNetCore" Version="12.7.0" />
+    <PackageReference Include="HotChocolate.Data" Version="12.7.0" />
   </ItemGroup>
 
   <ItemGroup>
