--- a/src/TransactionsGui/TransactionsGui.csproj
+++ b/src/TransactionsGui/TransactionsGui.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.1" PrivateAssets="all" />
+    <PackageReference Include="System.Reactive" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TransactionsGraphQLClient\TransactionsGraphQLClient.csproj" />
   </ItemGroup>
 
 </Project>
