--- a/src/TransactionsGraphQLClient/TransactionsGraphQLClient.csproj
+++ b/src/TransactionsGraphQLClient/TransactionsGraphQLClient.csproj
@@ -1,10 +1,25 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <GraphQL Remove="Mutations\AddPayment.graphql" />
+    <GraphQL Remove="Queries\GetTransactions.graphql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="Queries\GetTransactions.graphql" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="Queries\GetTransactions.graphql">
+      <GraphQL>true</GraphQL>
+    </AdditionalFiles>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
